fixed weapon text overflowing page

--- a/src/components/DossierPages/LastSeenWith/Weapon.module.css
+++ b/src/components/DossierPages/LastSeenWith/Weapon.module.css
@@ -1,6 +1,7 @@
 .weaponCard {
     height: 150px;
     display: flex;
+    overflow: hidden;
 }
 
 .weaponCard img {
